# vibe-coding-

./: .gitignore  BUILD.gn  README.md  bridge.py  convert.py  keymap.json
work1/: BUILD.gn  sle_server_adv.c  sle_server_adv.h  sle_uuid_server.c  sle_uuid_server.h
work2/: BUILD.gn  sle_uuid_client.c
